# clitools

./: .gitignore  Cargo.toml  README.md  bun.lockb  justfile  package.json
completion/: clit-install  clit-uninstall  clitinfo  countlines  diffdir  listdirs  mimers  rot  sysinfo  treers
noten/: adding-a-new-package.md  package-wishlist.md  rot.md  whats-going-on.md
pkgs/clitinfo/: Cargo.toml
pkgs/clitinfo/src/: lib.rs  main.rs  root_finder.rs
pkgs/countlines/: Cargo.toml
pkgs/countlines/src/: lib.rs  main.rs
pkgs/diffdir/: Cargo.toml
pkgs/diffdir/src/: main.rs
pkgs/diffdir/src/commands/: init.rs
pkgs/filers/: Cargo.toml
pkgs/filers/src/: main.rs
pkgs/installer/: Cargo.toml  README.md
pkgs/installer/src/: main.rs
pkgs/installer/src/builder/: build_bin.rs  error.rs  mod.rs
pkgs/installer/src/fs/: error.rs  main_dirs.rs  mod.rs
pkgs/librs/: Cargo.toml
pkgs/librs/src/: cli.rs  config_file.rs  distro.rs  fs.rs  lib.rs  progressbar.rs  rot.rs  subprocess.rs  windows.rs
pkgs/librs/src/cli/: cli_style.rs  gen_completion.rs  mod.rs  output_format.rs
pkgs/librs/src/config_file/: cargo_toml.rs  cargometa.rs
pkgs/librs/src/datetime/: datetime_comparison.rs  datetime_formatter.rs  datetime_parser.rs  mod.rs
pkgs/librs/src/fs/: dir_tree.rs  dir_tree_comparison.rs  dir_tree_difference.rs  dir_tree_error.rs  dir_tree_similarity.rs  extension.rs  highlight_file_name.rs  mod.rs  projects.rs  split_path.rs
pkgs/librs/src/fs/dir_tree/: comparison.rs  leaf.rs  mod.rs  tree.rs  util.rs
pkgs/librs/src/fs/filemeta/: m4a.rs
pkgs/librs/src/fs/projects/: project.rs  project_finder.rs
pkgs/librs/src/math/: wrap.rs
pkgs/librs/src/progressbar/: bar_style.rs  bar_width.rs  terminal_helpers.rs  tui.rs  tui_config.rs  view.rs
pkgs/librs/src/subprocess/: uname.rs  which.rs
pkgs/librs/src/sysinfo/: README.md  hardware.rs
pkgs/librs/src/sysinfo/hardware/: battery.rs  monitors.rs
pkgs/librs/src/sysinfo/software/: platform.rs
pkgs/librs/src/windows/: windows_table.rs
pkgs/listdirs/: Cargo.toml
pkgs/listdirs/src/: lib.rs  main.rs
pkgs/meta/: Cargo.toml
pkgs/meta/src/: main.rs
pkgs/meta/src/commands/: main.rs
pkgs/meta/src/handlers/: m4a.rs  mod.rs
pkgs/mimers/: Cargo.toml
pkgs/mimers/src/: lib.rs  main.rs
pkgs/music-meta-renamer/: Cargo.toml  README.md
pkgs/music-meta-renamer/noten/: format.md
pkgs/music-meta-renamer/src/: main.rs
pkgs/music-meta-renamer/src/commands/: explain_format.rs  main.rs  mod.rs  rename.rs
pkgs/progressbar/: Cargo.toml
pkgs/progressbar/src/: govi.rs  lib.rs  main.rs  progress.rs  progressing.rs
pkgs/progressbar/src/args/: defs.rs  parser.rs
pkgs/progressbar/src/commands/: gen.rs  govi.rs  init.rs  ml_progress.rs  mod.rs  progress.rs  progressing.rs
pkgs/progressbar/src/progress_bars/: govi.rs  ml_progress.rs  mod.rs  progress.rs  progressing.rs
pkgs/rot/: Cargo.toml
pkgs/rot/src/: lib.rs  main.rs
pkgs/sysinfo/: Cargo.toml  README.md
pkgs/sysinfo/src/: lib.rs  main.rs  sys_info.rs
pkgs/sysinfo/src/hardware/: battery.rs
pkgs/timers/: Cargo.toml  README.md
pkgs/timers/src/: commands.rs  db.rs  enums.rs  fs.rs  lib.rs  main.rs
pkgs/timers/src/commands/: abort.rs  db.rs  init.rs  project.rs  start.rs  stop.rs
pkgs/timers/src/commands/db/: empty.rs  init.rs  locate.rs
pkgs/timers/src/commands/project/: list.rs  remove.rs  summary.rs
pkgs/timers/src/db/: create.rs  entity.rs  error.rs  main_db.rs
pkgs/timers/src/db/entity/: project.rs  timer.rs  timing.rs
pkgs/timers/src/enums/: timer_event.rs
pkgs/timers/src/fs/: main_dir.rs
pkgs/timers/src/view/: timings.rs
pkgs/treers/: Cargo.toml
pkgs/treers/src/: main.rs
pkgs/treers/src/commands/: init.rs
pkgs/uninstaller/: Cargo.toml  README.md
pkgs/uninstaller/src/: lib.rs  main.rs
scripts/: build.bat  build.sh  clippy.sh  setup.ts
src/: fs.rs
src/fs/: readdir.rs
